--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
 
 <!-- footer -->
 <div class = "text">
-  <a href="https://devan4264.github.io/improved-octo-chainsaw-charlie/"> Link to the Github repository</a> 
-
+  <a href="https://github.com/devan4264/improved-octo-chainsaw-charlie"> Link to the Github repository</a> 
 </div>
 
-<img     src="https://media.istockphoto.com/id/167120918/photo/pink-and-white-frosted-cupcake-isolated-on-white.jpg?s=612x612&w=0&k=20&c=o1xFPaMLhmq7y-LczWkePTOP1yotfx6OOT9VHcDNha0=" alt="yummy food" width = "150" height="150" align= right id="cupcake">
+
+<!-- make this positionable -->
+<div class = "food">
+<img src="https://media.istockphoto.com/id/167120918/photo/pink-and-white-frosted-cupcake-isolated-on-white.jpg?s=612x612&w=0&k=20&c=o1xFPaMLhmq7y-LczWkePTOP1yotfx6OOT9VHcDNha0=" alt="yummy food" width = "150" height="150" id="cupcake">
+</div>
+
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js'></script>
